--- a/wally.toml
+++ b/wally.toml
@@ -1,7 +1,11 @@
 [package]
 name = "kinqandi/dumpster"
-version = "0.1.0"
+version = "0.1.1"
 registry = "https://github.com/UpliftGames/wally-index"
+license = "MIT OR Apache-2.0"
 realm = "shared"
-
-[dependencies]
+authors = [
+	"KinqAndi (https://github.com/KinqAndi)",
+]
+include = ["src", "src/**", "wally.toml", "wally.lock", "default.project.json"]
+exclude = ["**"]
